# TeleportHackOnVanillaCpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
res/configs/: abc.fav  all.fav  favlist.fav
scripts/: build - debug.bat  build - release.bat  build.bat  clean.bat  env - debug.bat  env - release.bat  env.bat  http_proxy.cmd  vcvars64_vanilla_cmake_clean.bat  vcvars64_vanilla_cmake_config_build.bat  vcvars64_vanilla_cmake_config_build_release.bat  vcvars64_vanilla_env.bat
src/: CMakeLists.txt  hack.cpp  main.cpp
src/config_parser/: CMakeLists.txt  teleport_list_parser.cpp  teleport_list_parser.h
src/hack/: CMakeLists.txt  hack.cpp  hack.h
src/ui/: CMakeLists.txt  ui.h  ui_main.cpp  ui_on_msg.cpp  ui_on_msg.h  ui_window.cpp
src/utils/: CMakeLists.txt  utils.cpp  utils.h
test/: CMakeLists.txt  demo.cpp  imgui_dx9_demo.cpp  target.cpp  test_teleport_list_parser.cpp
third/: CMakeLists.txt
